# BigGraph

./: .gitignore  CMakeLists.txt  Node.cpp  Node.h  PProcedure.cpp  PProcedure.h  README.md  Value.cpp  driver.cpp
ground_truth/: ic1-sf0.1.txt  ic1-sf3.txt  ic2-sf0.1.txt  ic2-sf3.txt  is1-sf0.1.txt  is1-sf3.txt
social_network-csv_composite-longdateformatter-sf0.1/social_network-csv_composite-longdateformatter-sf0.1/: params.ini
social_network-csv_composite-longdateformatter-sf0.1/social_network-csv_composite-longdateformatter-sf0.1/dynamic/: .comment_0_0.csv.crc  .forum_0_0.csv.crc  .forum_hasMember_person_0_0.csv.crc  .person_0_0.csv.crc  .person_knows_person_0_0.csv.crc  .person_likes_comment_0_0.csv.crc  .person_likes_post_0_0.csv.crc  .post_0_0.csv.crc  comment_hasCreator_person_0_0.csv  comment_hasTag_tag_0_0.csv  comment_isLocatedIn_place_0_0.csv  comment_replyOf_comment_0_0.csv  comment_replyOf_post_0_0.csv  forum_0_0.csv  forum_containerOf_post_0_0.csv  forum_hasModerator_person_0_0.csv  forum_hasTag_tag_0_0.csv  person_0_0.csv  person_hasInterest_tag_0_0.csv  person_isLocatedIn_place_0_0.csv  person_knows_person_0_0.csv  person_likes_comment_0_0.csv  person_likes_post_0_0.csv  person_studyAt_organisation_0_0.csv  person_workAt_organisation_0_0.csv  post_hasCreator_person_0_0.csv  post_hasTag_tag_0_0.csv  post_isLocatedIn_place_0_0.csv
social_network-csv_composite-longdateformatter-sf0.1/social_network-csv_composite-longdateformatter-sf0.1/static/: organisation_0_0.csv  organisation_isLocatedIn_place_0_0.csv  place_0_0.csv  place_isPartOf_place_0_0.csv  (+4 more)
(+5 files in other folders)
